<resources xmlns:xliff = "urn:oasis:names:tc:xliff:document:1:2">
    //Translations for the layout file
    <string name="app_name" translatable="false">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="total_cost">0</string>
    <string name="summary">Order Summary</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>

    //Translations for the order summary
    <string name="with_whippded_cream">Add whipped cream?<xliff:g id="cream" example = "true">%b</xliff:g></string>
    <string name="with_chocolate">Add chocolate?<xliff:g id="chocolate" example = "true">%b</xliff:g></string>
    <string name="quantity_ordered">Quantity:</string>
    <string name="total_price">Total:</string>
    <string name="customer_name">Name:<xliff:g id="name" example = "Amy">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="customer_name_email_subject">Order for <xliff:g id="name" example="Amy">%s</xliff:g></string>

</resources>
